<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My First App</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter a message.</string>
    <string name="button_send">Send</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_fb">Facebook</string>
    <string name="action_twitter">Twitter</string>
    <string name="pause">Pause</string>
    <string name="title_activity_dialog">Dialog</string>
    <string name="title_activity_dialog_t">DialogTActivity</string>
    <string name="pause_text">Activity should now be paused.</string>
    <string name="resume">Resume</string>
    <string name="call">Call Number</string>
    <string name="map">Find On Map</string>
    <string name="web">Search Web Address</string>
	<string name="action_call">Call</string>
	<string name="action_map">Map</string>
	<string name="action_web">Web</string>
</resources>
