<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_call"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_call"/>
    <item
        android:id="@+id/action_map"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_map"/>
    <item
        android:id="@+id/action_web"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_web"/>
    <item
        android:id="@+id/action_twitter"
        android:icon="@drawable/ic_action_twitter"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/action_twitter"/>
    <item
        android:id="@+id/action_fb"
        android:icon="@drawable/ic_action_fb"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/action_fb"/>

</menu>