<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingTop="?android:attr/actionBarSize" >

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/pause_text"
        android:textColor="#ffe1b1f4"
        android:textSize="40sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="#99000000"
        android:onClick="callNumber"
        android:padding="5dp"
        android:text="@string/call"
        android:textColor="#ffe1b1f4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="#99000000"
        android:onClick="openMap"
        android:text="@string/map"
        android:textColor="#ffe1b1f4"
        android:padding="5dp"/>
    
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="#99000000"
        android:onClick="openWeb"
        android:text="@string/web"
        android:textColor="#ffe1b1f4"
        android:padding="5dp"/>

</LinearLayout>